ENTREGA_P3_OPCIONAL_CODIGO_INTERMEDIO/P3_OPCIONAL_MARCO_GARCIA_PABLO_ROIG/tests/invalid/11_invalid_multidecl_with_assign.lava
float d, e = 0xFF / 0702;
